# Watermark

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Watermark/: 1.manifest  CApp.cpp  CApp.h  CMakeLists.txt  CWndDesktopText.cpp  CWndDesktopText.h  CWndMain.cpp  CWndMain.h  CWndOptions.cpp  CWndOptions.h  GlobalOptions.cpp  GlobalOptions.h  Utils.cpp  Utils.h  Watermark.cpp  pch.h
Watermark/MyEck/: MyEck.cpp
Watermark/Res/: Resource.rc  resource.h
